--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,33 +8,11 @@
     android:background="@color/background_color"
     >
 
-    <Button
-        android:id="@+id/connect_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="25dp"
-        android:layout_weight=".33"
-        android:backgroundTint="#FFFFFF"
-        android:text="@string/connect_appa"
-        android:textSize="24sp"
-        android:textColor="@color/button_text_color"/>
-
-    <Button
-        android:id="@+id/directory_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginBottom="50dp"
-        android:layout_weight="0.33"
-        android:backgroundTint="#FFFFFF"
-        android:text="@string/directory"
-        android:textSize="24sp"
-        android:textColor="@color/button_text_color"/>
-
+  <GridView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:id="@+id/grid_view"
+      android:numColumns="2" />
 
 
 </LinearLayout>
