--- a/app/src/main/res/layout/fragment_tutorial_text2.xml
+++ b/app/src/main/res/layout/fragment_tutorial_text2.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/tutorial_header"
+        android:text="@string/tutorial_2_head"
         android:textSize="30sp" />
 
     <TextView
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/tutorial_body"
+        android:text="@string/tutorial_2_body"
         android:textColor="@color/text_color"/>
 
 </LinearLayout>
