--- a/app/src/main/res/layout/nav_list_activity.xml
+++ b/app/src/main/res/layout/nav_list_activity.xml
@@ -38,9 +38,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/fab_margin"
             android:layout_marginLeft="@dimen/fab_margin"
             android:layout_marginTop="@dimen/fab_margin"
+            android:layout_marginRight="@dimen/fab_margin"
             android:orientation="horizontal">
 
             <SearchView
@@ -48,13 +48,10 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.5"
+                android:contentDescription="@string/search_by_name"
+                android:iconifiedByDefault="false"
+                android:queryHint="@string/search_by_name"
                 android:voiceSearchMode="showVoiceSearchButton|launchRecognizer" />
-
-            <Spinner
-                android:id="@+id/location_cat_spinner"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"></Spinner>
 
         </LinearLayout>
 
