--- a/app/src/main/res/layout/place_tile.xml
+++ b/app/src/main/res/layout/place_tile.xml
@@ -5,7 +5,7 @@
 
 
     <data xmlns:android="http://schemas.android.com/apk/res/android">
-        <variable name="place" type="com.example.appa.model.Place" />
+        <variable name="place" type="com.example.appa.viewmodel.PlaceViewModel" />
         <!--<variable name="handlers" type="com.example.appa.ui.PlaceHandlers" />-->
     </data>
 
@@ -26,34 +26,48 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/textView2"
+            <LinearLayout
+                android:id="@+id/linearLayout3"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:text="@{place.name}"
-                android:textColor="#000000"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/button"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/place_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:text="@{place.name}"
+                    android:textColor="#000000" />
+
+                <TextView
+                    android:id="@+id/place_distance"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:text="@{place.distanceString}"
+                    android:textColor="#000000" />
+            </LinearLayout>
 
             <Button
                 android:id="@+id/button"
-                android:contentDescription="More Information Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
                 android:backgroundTint="#FFFFFF"
+                android:contentDescription="@string/btn_loc_more_info"
                 android:textAlignment="center"
                 app:icon="@android:drawable/ic_menu_help"
                 app:iconGravity="textEnd"
                 app:iconPadding="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/textView2"
+                app:layout_constraintStart_toEndOf="@+id/linearLayout3"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
         </androidx.constraintlayout.widget.ConstraintLayout>
