--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -5,8 +5,11 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="20dp"
-    android:gravity="center">
-    
+    android:gravity="center"
+    android:clickable="true"
+    android:id="@+id/category_card"
+    >
+
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -21,4 +24,5 @@
         android:textSize="25sp"
         android:layout_marginTop="5dp"
         />
+
 </LinearLayout>
